debug_dev_4.log
C:\Users\DEBI PRASAD\Downloads\Mini CRM Backend\node_modules\ts-node\src\index.ts:859
    return new TSError(diagnosticText, diagnosticCodes, diagnostics);
           ^
TSError: Γ¿» Unable to compile TypeScript:
src/config/prisma.ts(3,16): error TS7016: Could not find a declaration file for module 'pg'. 'C:/Users/DEBI PRASAD/Downloads/Mini CRM Backend/node_modules/pg/lib/index.js' implicitly has an 'any' type.
  Try `npm i --save-dev @types/pg` if it exists or add a new declaration (.d.ts) file containing `declare module 'pg';`

    at createTSError (C:\Users\DEBI PRASAD\Downloads\Mini CRM Backend\node_modules\ts-node\src\index.ts:859:12)
    at reportTSError (C:\Users\DEBI PRASAD\Downloads\Mini CRM Backend\node_modules\ts-node\src\index.ts:863:19)
    at getOutput (C:\Users\DEBI PRASAD\Downloads\Mini CRM Backend\node_modules\ts-node\src\index.ts:1077:36)
    at Object.compile (C:\Users\DEBI PRASAD\Downloads\Mini CRM Backend\node_modules\ts-node\src\index.ts:1433:41)
    at Module.m._compile (C:\Users\DEBI PRASAD\Downloads\Mini CRM Backend\node_modules\ts-node\src\index.ts:1617:30)
    at node:internal/modules/cjs/loader:1820:10
    at Object.require.extensions.<computed> [as .ts] (C:\Users\DEBI PRASAD\Downloads\Mini CRM Backend\node_modules\ts-node\src\index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1423:32)
    at Function._load (node:internal/modules/cjs/loader:1246:12)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14) {
  diagnosticCodes: [ 7016 ]
}
